fix: make sign out button full width on mobile

--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -7,7 +7,7 @@
 }
 
 .nav-link-destructive {
-  @apply text-rose-600 focus:text-rose-600 hover:text-rose-500 dark:text-rose-600 dark:hover:text-rose-500 dark:focus:text-rose-500;
+  @apply relative text-rose-600 focus:text-rose-600 hover:text-rose-500 dark:text-rose-600 dark:hover:text-rose-500 dark:focus:text-rose-500;
 }
 
 .nav-link:hover::after,
